Bug 1845571, when creating a static clone, docgroup may or may not have been created already. Don't even try to optimize out that case, r=nika

Differential Revision: https://phabricator.services.mozilla.com/D184895